# learn-seldon-core-v1

./: .env-example  .envrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.fastapi  Dockerfile.modelserver  Dockerfile.seldon  ENHANCEMENTS.md  GETTING_STARTED.md  Makefile  PROJECT_SUMMARY.md  QUICKREF.md  QUICKSTART_K8S.md  README.md  SELDON_DEPLOYMENT.md  SELDON_IMPLEMENTATION.md  TODO.md  TOOLS_SETUP.md  blog.md  pyproject.toml  quickstart.sh  requirements.txt
.direnv/python-3.12/: pyvenv.cfg
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING_STARTED.md  QUICKREF.md  QUICKSTART.md  SELDON_DEPLOYMENT.md  SETUP.md  TOOLS_SETUP.md  TROUBLESHOOTING.md  TROUBLESHOOTING_SETUP.md  blog.md
k8s/: fastapi-deployment.yaml  model-server-deployment.yaml  namespace.yaml  seldon-deployment.yaml
notebooks/: 01_train_model.ipynb  02_inference_test.ipynb
scripts/: cleanup-k8s.sh  deploy-k8s.sh  deploy-seldon.sh  run-local.sh  setup.sh  test-all.sh  test-seldon.sh  validate.py
src/: __init__.py  app.py  generate_data.py  inference.py  model_server.py  seldon_model.py  train_model.py
src/templates/: index.html
tests/: test_app.py  test_data_generation.py  test_model.py  test_sentiment_app_server.py
